# jumping-chest

./: .gitignore  CMakeLists.txt  README.md  addition.h  clavier.c  clavier.h  constant.h  constante.h  fonctions_SDL.c  fonctions_SDL.h  fonctions_fichiers.c  fonctions_fichiers.h  functions_SDL.c  functions_SDL.h  functions_files.c  functions_files.h  game.c  game.h  graphic.c  graphic.h  graphique.c  graphique.h  interaction.c  interaction.h  joueur.c  joueur.h  keyboard.c  keyboard.h  logique.c  logique.h  main.c  map.c  map.h  player.c  player.h  sdl2-light.c  sdl2-light.h  sdl2-mixer-light.c  sdl2-mixer-light.h  sdl2-ttf-light.c  (+4 more)
archive/: addition.c  addition.h
assets/: map-classic.txt  map-lava.txt  map-snow.txt  map.txt
